# airco

./: CMakeLists.txt  README.MD  main.cpp
HAL/: HALInterface.cpp  HALInterface.hpp
HAL/Linux/Impl/: HALImpl.cpp  HALImpl.hpp
HAL/Linux/Impl/OutputImpl/: OutputLinuxImpl.cpp  OutputLinuxImpl.hpp
HAL/Linux/Impl/TemperatureInputImpl/: TemperatureInputImpl.cpp  TemperatureInputImpl.hpp
HAL/Linux/Menu/: Menu.cpp  Menu.hpp
HAL/STM/: HALImpl.cpp  HALImpl.hpp  OutputSTMImpl.cpp  OutputSTMImpl.hpp  TemperatureInputSTMImpl.cpp  TemperatureInputSTMImpl.hpp
Implementation/: OutputImpl.cpp  OutputImpl.hpp  TemperatureControllerContextImpl.cpp  TemperatureControllerContextImpl.hpp  TemperatureInputImpl.cpp  TemperatureInputImpl.hpp
Interfaces/: Output.hpp  TemperatureInput.hpp
Menu/: Menu.cpp  Menu.hpp
TemperatureController/: TemperatureController.cpp  TemperatureController.hpp
TemperatureController/Context/: TemperatureControllerContext.cpp  TemperatureControllerContext.hpp
TemperatureController/States/: State.cpp  State.hpp
TemperatureController/States/CoolingState/: CoolingState.cpp  CoolingState.hpp
TemperatureController/States/HeatingState/: HeatingState.cpp  HeatingState.hpp
TemperatureController/States/IdleState/: IdleState.cpp  IdleState.hpp
unittesting/: CMakeLists.txt  CoolingStateTest.cpp  HeatingStateTest.cpp  IdleStateTest.cpp  StateTest.hpp  TemperatureControllerTest.cpp
